# watchlist

./: .gitignore  LICENSE  Makefile  docker-compose.dev.yaml  docker-compose.prod.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: config.py  main.py
backend/app/models/: letterboxd.py  motn.py
backend/app/services/: availability.py  cache.py  letterboxd.py
backend/tests/: conftest.py  test_letterboxd_service.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: colors.ts  types.ts
frontend/src/lib/components/: MoviePoster.svelte  SearchBar.svelte  SubscriptionSelect.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: clear-dev-cache.sh  health-check.sh  inspect-cache.sh  sync-cache-prod-to-dev.sh
